code25_all/swift/26910525.txt
UIButton
class VectorizedButton: UIButton {

    override var highlighted: Bool {
        didSet {
            setNeedsDisplay()
        }
    }

}

var twitterButton: TwitterButton?

TwitterButton
VectorizedButton
override var highlighted: Bool = false

<unknown>:0: error: super.init called multiple times in initializer
<unknown>:0: error: super.init called multiple times in initializer
<unknown>:0: error: super.init called multiple times in initializer

required init(coder aDecoder: NSCoder) {
    highlighted = false
    super.init(coder: aDecoder)
}

error: 'self' used before super.init call
    highlighted = false
                ^
error: 'self' used before super.init call
    highlighted = false
    ^

